more changes around logging out

--- a/JwtAuthentication.Server/JwtAuthentication.Server.csproj
+++ b/JwtAuthentication.Server/JwtAuthentication.Server.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Model\**" />
+    <Content Remove="Model\**" />
+    <EmbeddedResource Remove="Model\**" />
+    <None Remove="Model\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="0.5.1" />
@@ -15,10 +22,6 @@
   <ItemGroup>
     <ProjectReference Include="..\JwtAuthentication.Client\JwtAuthentication.Client.csproj" />
     <ProjectReference Include="..\JwtAuthentication.Shared\JwtAuthentication.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Model\" />
   </ItemGroup>
 
 </Project>
