--- a/JwtAuthentication.Client/JwtAuthentication.Client.csproj
+++ b/JwtAuthentication.Client/JwtAuthentication.Client.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.5.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="TheKfaktor.BlazorExtensions" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
